--- a/pestañas/nosotros.html
+++ b/pestañas/nosotros.html
@@ -204,6 +204,8 @@
                 instalaciones y recursos humanos para formar estudiantes
                 responsables y comprometidos.
               </p>
+
+               <!---######################-SECCION Descargar reglamento-#############################3-->
               <h4 class="text-danger">Nuestro Reglamento</h4>
               <div
                 class="pdf-card bg-light p-3 rounded shadow mx-auto"
@@ -222,6 +224,7 @@
                   Ver Reglamento Escolar
                 </a>
               </div>
+                <!---######################-SECCION Descargar reglamento-#############################3-->
             </div>
           </div>
         </div>
