--- a/pestañas/cronograma.html
+++ b/pestañas/cronograma.html
@@ -33,10 +33,13 @@
     </div>
   </nav>
   <body>
+    <br>
+    <br>
+
     <h1 class="title">Cronograma Escolar 2025</h1>
 <!--################################ BOTON PARA AGREGAR EVENTO####################################-->
 <div class="container my-4 text-center">
-  <button id="btnAgregarEvento" class="btn btn-success">Agregar Evento</button>
+  <button id="btnAgregarEvento" class="btn btn-primary">Agregar Evento</button>
 </div>
 
 <!--################################ MODAL PARA AGREGAR EVENTO####################################-->
@@ -189,8 +192,10 @@
         </div>
       </section>
       
-    <div id="eventosDinamicos"></div>  
-    </div>
+      <div id="eventosDinamicos">
+        <div class="calendario"></div>
+      </div>  
+   
   </body>
 
  <div class="social-floating">
