Actualizacion conexion y modal
Actulizacion del codigoconexion.s y se implemento la utilizacion del modal para mostrar el reglamento de la institucion

--- a/pestañas/nosotros.html
+++ b/pestañas/nosotros.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../css/votacion.css">
+    <link rel="stylesheet" href="../css/votacion.css" />
   </head>
   <body>
     <br />
@@ -60,18 +60,18 @@
         </div>
       </div>
     </nav>
-<div class="calificacion text-center my-4">
-  <h3>Califica la página:</h3>
-  <div id="estrellas">
-    <span class="estrella" data-valor="1">&#9734;</span>
-    <span class="estrella" data-valor="2">&#9734;</span>
-    <span class="estrella" data-valor="3">&#9734;</span>
-    <span class="estrella" data-valor="4">&#9734;</span>
-    <span class="estrella" data-valor="5">&#9734;</span>
-  </div>
-  <p id="mensajeCalificacion" class="mt-2 text-success"></p>
-  <p id="promedioEstrellas" class="mt-1">Promedio: 0 ⭐</p>
-</div>
+    <div class="calificacion text-center my-4">
+      <h3>Califica la página:</h3>
+      <div id="estrellas">
+        <span class="estrella" data-valor="1">&#9734;</span>
+        <span class="estrella" data-valor="2">&#9734;</span>
+        <span class="estrella" data-valor="3">&#9734;</span>
+        <span class="estrella" data-valor="4">&#9734;</span>
+        <span class="estrella" data-valor="5">&#9734;</span>
+      </div>
+      <p id="mensajeCalificacion" class="mt-2 text-success"></p>
+      <p id="promedioEstrellas" class="mt-1">Promedio: 0 ⭐</p>
+    </div>
 
     <section id="nosotros" class="py-5 bg-light">
       <div class="container">
@@ -218,16 +218,63 @@
                 responsables y comprometidos.
               </p>
 
-               <!---######################-SECCION Descargar reglamento-#############################3-->
+              <!---######################-SECCION Descargar reglamento-#############################3-->
+              <!-- Modal para mostrar PDF -->
+              <div
+                class="modal fade"
+                id="pdfModal"
+                tabindex="-1"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog modal-xl modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Reglamento Escolar</h5>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Cerrar"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <iframe
+                        id="pdfViewer"
+                        src=""
+                        width="100%"
+                        height="500px"
+                        style="border: none"
+                      ></iframe>
+                    </div>
+                    <div class="modal-footer">
+                      <a
+                        id="downloadPDF"
+                        href=""
+                        class="btn btn-primary"
+                        download
+                      >
+                        Descargar PDF
+                      </a>
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                      >
+                        Cerrar
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <h4 class="text-danger">Nuestro Reglamento</h4>
               <div
                 class="pdf-card bg-light p-3 rounded shadow mx-auto"
                 style="max-width: 300px"
               >
-                <a
-                  href="../documentos/prueba.pdf"
-                  target="_blank"
+                <button
                   class="btn btn-primary w-100 d-flex align-items-center justify-content-center"
+                  id="openPDF"
+                  data-pdf="../documentos/Manual_Colegio_Fernando_Llort_Choussy.pdf"
                 >
                   <img
                     src="../img/pdf.png"
@@ -235,9 +282,10 @@
                     style="width: 24px; height: 24px; margin-right: 8px"
                   />
                   Ver Reglamento Escolar
-                </a>
+                </button>
               </div>
-                <!---######################-SECCION Descargar reglamento-#############################3-->
+
+              <!---######################- FIN SECCION Descargar reglamento-#############################3-->
             </div>
           </div>
         </div>
@@ -356,73 +404,93 @@
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
-  const estrellas = document.querySelectorAll("#estrellas .estrella");
-  const mensaje = document.getElementById("mensajeCalificacion");
-  const promedio = document.getElementById("promedioEstrellas");
-  let calificacionSeleccionada = 0;
+        const estrellas = document.querySelectorAll("#estrellas .estrella");
+        const mensaje = document.getElementById("mensajeCalificacion");
+        const promedio = document.getElementById("promedioEstrellas");
+        let calificacionSeleccionada = 0;
 
-  // Pintar según promedio inicial
-  async function cargarPromedio() {
-    try {
-      const res = await fetch("/promedio");
-      const data = await res.json();
-      pintarEstrellas(data.promedio);
-      promedio.textContent = `Promedio: ${data.promedio.toFixed(1)} ⭐ (${data.total} votos)`;
-    } catch (err) {
-      console.error("Error al cargar promedio:", err);
-    }
-  }
+        // Pintar según promedio inicial
+        async function cargarPromedio() {
+          try {
+            const res = await fetch("/promedio");
+            const data = await res.json();
+            pintarEstrellas(data.promedio);
+            promedio.textContent = `Promedio: ${data.promedio.toFixed(1)} ⭐ (${
+              data.total
+            } votos)`;
+          } catch (err) {
+            console.error("Error al cargar promedio:", err);
+          }
+        }
 
-  estrellas.forEach(estrella => {
-    estrella.addEventListener("mouseover", () => {
-      const valor = parseInt(estrella.dataset.valor);
-      pintarEstrellas(valor);
-    });
+        estrellas.forEach((estrella) => {
+          estrella.addEventListener("mouseover", () => {
+            const valor = parseInt(estrella.dataset.valor);
+            pintarEstrellas(valor);
+          });
 
-    estrella.addEventListener("mouseout", () => {
-      pintarEstrellas(calificacionSeleccionada);
-    });
+          estrella.addEventListener("mouseout", () => {
+            pintarEstrellas(calificacionSeleccionada);
+          });
 
-    estrella.addEventListener("click", async () => {
-      calificacionSeleccionada = parseInt(estrella.dataset.valor);
-      pintarEstrellas(calificacionSeleccionada);
+          estrella.addEventListener("click", async () => {
+            calificacionSeleccionada = parseInt(estrella.dataset.valor);
+            pintarEstrellas(calificacionSeleccionada);
 
-      try {
-        const res = await fetch("/calificar", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ numEstrellas: calificacionSeleccionada })
+            try {
+              const res = await fetch("/calificar", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                  numEstrellas: calificacionSeleccionada,
+                }),
+              });
+
+              if (res.ok) {
+                mensaje.textContent = `Gracias por calificar con ${calificacionSeleccionada} estrella(s)!`;
+                cargarPromedio();
+              } else {
+                mensaje.textContent = "Error al enviar tu calificación";
+              }
+            } catch (err) {
+              console.error(err);
+              mensaje.textContent = "Error de conexión con el servidor";
+            }
+          });
         });
 
-        if (res.ok) {
-          mensaje.textContent = `Gracias por calificar con ${calificacionSeleccionada} estrella(s)!`;
-          cargarPromedio();
-        } else {
-          mensaje.textContent = "Error al enviar tu calificación";
+        function pintarEstrellas(valor) {
+          estrellas.forEach((estrella) => {
+            if (parseInt(estrella.dataset.valor) <= valor) {
+              estrella.classList.add("seleccionada");
+              estrella.innerHTML = "&#9733;"; // estrella llena
+            } else {
+              estrella.classList.remove("seleccionada");
+              estrella.innerHTML = "&#9734;"; // estrella vacía
+            }
+          });
         }
-      } catch (err) {
-        console.error(err);
-        mensaje.textContent = "Error de conexión con el servidor";
-      }
-    });
-  });
 
-  function pintarEstrellas(valor) {
-    estrellas.forEach(estrella => {
-      if (parseInt(estrella.dataset.valor) <= valor) {
-        estrella.classList.add("seleccionada");
-        estrella.innerHTML = "&#9733;"; // estrella llena
-      } else {
-        estrella.classList.remove("seleccionada");
-        estrella.innerHTML = "&#9734;"; // estrella vacía
-      }
-    });
-  }
+        // Inicializar
+        cargarPromedio();
+      });
+    </script>
 
-  // Inicializar
-  cargarPromedio();
-});
+    <script>
+      document.getElementById("openPDF").addEventListener("click", function () {
+        const pdfUrl = this.getAttribute("data-pdf");
 
+        // Asignar URL al iframe
+        document.getElementById("pdfViewer").src = pdfUrl;
+
+        // Asignar URL al botón de descarga
+        const downloadBtn = document.getElementById("downloadPDF");
+        downloadBtn.href = pdfUrl;
+
+        // Mostrar modal
+        const modal = new bootstrap.Modal(document.getElementById("pdfModal"));
+        modal.show();
+      });
     </script>
   </body>
 </html>
