--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
       </div>
     </section>
-    <!---######################-SECCION ESTADISTICAS-#############################3-->
+    <!------------------------- INICIO SECCION ESTADISTICAS--------------------------------3-->
   <section class="estadisticas py-5 d-flex justify-content-center">
   <div class="card text-center shadow-lg" style="width: 100%; max-width: 500px; background-color:#000063; border-radius:1rem; color:#fff;">
     <div class="card-body p-4">
@@ -194,9 +194,9 @@
     </div>
   </div>
 </section>
- <!---######################-SECCION ESTADISTICAS-#############################3-->
+ <!---------------------------FIN SECCION ESTADISTICAS--------------------------------3-->
 
-  <!---######################-SECCION MODAL registrar visitantes-#############################3-->
+  <!------------------------ INICIO SECCION MODAL registrar visitantes-----------------------------------3-->
     <div
       class="modal fade"
       id="visitanteModal"
@@ -235,7 +235,7 @@
                 <label for="tipo" class="form-label">Tipo de visitante:</label>
                 <select name="idRol" id="tipo" class="form-select" required>
                   <option value="">Seleccione un rol</option>
-                  <!-- Opciones cargadas desde JSON -->
+                  <!--se cargaran las opciones por defecto-->
                 </select>
               </div>
               <button type="submit" class="btn btn-primary w-100">
@@ -298,7 +298,7 @@
         // Manejar el boton del formulario
         const form = document.getElementById("formVisitante");
         form.addEventListener("submit", (e) => {
-          e.preventDefault(); // Evita que la pagina se recargue
+          e.preventDefault(); // Hace que no se recargue la pagina
 
           const nombre = document.getElementById("nombre").value;
           const idRol = select.value;
@@ -315,10 +315,10 @@
               mensaje.classList.add("text-success");
               mensaje.style.display = "block";
 
-              // Cerrar modal después de 2 segundos
+              // cierra el formulario luego de 1 segundo es 1000 porque esta en milisegundos
               setTimeout(() => modal.hide(), 1000);
 
-              // Limpiar campos
+              // resetear formulario 
               form.reset();
             })
             .catch((err) => {
@@ -367,3 +367,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
+
+
