eventos ya en un div separado

--- a/pestañas/redes.html
+++ b/pestañas/redes.html
@@ -78,6 +78,27 @@
             </div>
           </div>
         </div>
+        <!-- Modal para Facebook con iframe -->
+<div class="modal fade" id="facebookModal" tabindex="-1" aria-labelledby="facebookModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="facebookModalLabel">Facebook</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body text-center">
+        <p>Conéctate con nosotros en nuestra página oficial de Facebook.</p>
+        <i class="bi bi-facebook text-primary" style="font-size: 50px;"></i>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <a href="https://www.facebook.com/share/1HBHPgNCyY/" target="_blank" class="btn btn-primary">Ir a Facebook</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
         <div class="col-md-4 mb-4">
           <div class="card shadow-lg rounded p-4 h-100">
             <div class="card-body">
