--- a/pestañas/cronograma.html
+++ b/pestañas/cronograma.html
@@ -191,10 +191,14 @@
           <div class="dia"><span class="numero">A partir del 28</span><p>Entrega de Certificados</p></div>
         </div>
       </section>
-      
-      <div id="eventosDinamicos">
+    </div>
+    <h1 style="text-align:center; text-shadow:1px 1px 2px #000; color:#c6dbff;">NUEVOS EVENTOS</h1>
+    <div class="meses">
+        <div id="eventosDinamicos">
         <div class="calendario"></div>
       </div>  
+    </div>
+    
    
   </body>
 
